--- a/client/src/components/cards/CardModal/TaskLists/Item.module.scss
+++ b/client/src/components/cards/CardModal/TaskLists/Item.module.scss
@@ -23,12 +23,12 @@
     width: 28px;
 
     &:hover {
-      background: rgba(9, 30, 66, 0.08);
+      background: rgba(255, 255, 255, 0.10);
     }
   }
 
   .moduleHeader {
-    color: #17394d;
+    color: var(--glass-text-primary);
     display: flex;
     font-size: 16px;
     font-weight: bold;
@@ -57,7 +57,7 @@
   }
 
   .moduleIcon {
-    color: #17394d;
+    color: var(--glass-text-secondary);
     font-size: 17px;
     height: 32px;
     left: -40px;
@@ -79,6 +79,6 @@
   }
 
   .wrapperDragging {
-    background: rgba(247, 246, 247, 0.8);
+    background: rgba(255, 255, 255, 0.08);
   }
 }
